# Agents

./: .env.example  .gitignore  00_conceitos_iniciais.md  Análise do Repositório *drmcoelho_Agents*.docx  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Overview.md  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agentkit/: README.md
agents/: README.md  gabarito.json
agents/labs/: lab1_react_agent.py
agents/solutions/: lab1_react_agent.py
agents_drop0/: CONTRIBUTING.md  GEMINI.md  Makefile  README.md  ROADMAP.md
agents_drop0/docs/: README.md
agents_drop0/docs/agents/: 00_conceitos_iniciais.md  README.md
agents_drop0/labs/01_sdk_boot/: README.md
agents_drop0/scripts/: patch_runner.sh
agents_drop1_lab01/: CONTRIBUTING.md  GEMINI.md  Makefile  README.md  ROADMAP.md
agents_drop1_lab01/docs/: README.md
agents_drop1_lab01/docs/agents/: 00_conceitos_iniciais.md
agents_drop1_lab01/labs/01_sdk_boot/: README.md  fix.sh  lab.yaml  run.sh
agents_drop1_lab01/labs/01_sdk_boot/py/: app.py
agents_drop1_lab01/labs/01_sdk_boot/tests/: test_lab01.py
agents_drop1_lab01/labs/01_sdk_boot/ts/: app.js
agents_drop2_lab02/: Makefile  README.md
agents_drop2_lab02/docs/agents/: 02_mcp.md
agents_drop2_lab02/fastapi/: __init__.py  testclient.py
agents_drop2_lab02/labs/02_mcp/: README.md  client.py  fix.sh  lab.yaml  run.sh  server.py
agents_drop2_lab02/labs/02_mcp/py/: server.py
agents_drop2_lab02/pydantic/: __init__.py
agents_drop2_lab02/tests/: __init__.py  conftest.py  test_lab02.py
capstones/b2c_service/: README.md  main.py
capstones/medical_pdf_reader/: README.md  main.py
data/: README.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md  QUICK_REFERENCE.md
mcp/: README.md
mcp/labs/: lab1_mcp_basics.py
sdks/: README.md  gabarito.json
sdks/labs/: lab1_openai.py
sdks/solutions/: lab1_openai.py
sdks/tests/: test_lab1_openai.py
shared/: __init__.py  check_env.py  deploy.py  evaluator.py  gabarito.py  passport.py
tests/: conftest.py  test_structure.py
(+3 files in other folders)
